# Windows-Game-Patches

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Windows-Game-Patches-Win32.sln  Windows-Game-Patches-x64.sln  Windows-Game-Patches.sln  Windows-Game-Patches.vcxproj  set_git_ver.cmd
.github/: FUNDING.yml  README.md
.github/workflows/: msbuild.yml
BrightMemoryInfinite.NoTAA/: BrightMemoryInfinite.NoTAA.vcxproj  dllmain.cpp
WoLong.Fix/: WoLong.Fix.sln  WoLong.Fix.vcxproj  dllmain.cpp
cmake/: win32.cmake  win32_install.cmake  yaml-cpp.cmake
data/x64/ACUnity.Patches/: version.ini
data/x64/Crysis3Remastered.Patches/SaveGames/: default_CPU.CSF  default_GPU.CSF
data/x64/PlanetOfLana.NoTAA/: d3d11.ini
include/: ImSubMenu.hpp  function_ptr.h  helper.hpp  memory.hpp  stdafx.h
source/ACMirage.NoTAA/: ACMirage.NoTAA.sln  ACMirage.NoTAA.vcxproj  dllmain.cpp
source/ACUnity.Patches/: CMakeLists.txt  dllmain.cpp
source/APT2.Patches/: APT2.Patches.vcxproj  dllmain.cpp
source/BF3.Patches/: BF3.Patches.vcxproj  CMakeLists.txt  dllmain.cpp
source/BFV.NoTAA/: BFV.NoTAA.sln  BFV.NoTAA.vcxproj  dllmain.cpp
source/BrightMemoryInfinite.NoTAA/: BrightMemoryInfinite.NoTAA.sln  BrightMemoryInfinite.NoTAA.vcxproj  BrightMemoryInfinite.NoTAA.vcxproj.filters  dllmain.cpp
source/Control.Patches/: Control.Patches.vcxproj  dllmain.cpp
source/Crysis3Remastered.Patches/: Crysis3Remastered.Patches.vcxproj  Crysis3Remastered.Patches.vcxproj.filters  IConsole.h  dllmain.cpp
source/CrysisWarhead.Patches/: CMakeLists.txt  dllmain.cpp
source/DD2.Sharpness/: CMakeLists.txt  dllmain.cpp
source/DeadSpace.NoTAA/: CMakeLists.txt  dllmain.cpp
source/DeathStranding.Fix/: DeathStranding.Fix.sln  DeathStranding.Fix.vcxproj  dllmain.cpp
source/EldenRing.NoTAA/: EldenRing.NoTAA.sln  EldenRing.NoTAA.vcxproj  dllmain.cpp
source/GTA5_Enhanced.Patches/: CMakeLists.txt  dllmain.cpp
source/GoW.NoTAA/: GoW.NoTAA.sln  GoW.NoTAA.vcxproj  dllmain.cpp
source/GoWR.NoTAA/: CMakeLists.txt  dllmain.cpp
source/GotG.NoTAA/: GotG.NoTAA.filters  GotG.NoTAA.sln  GotG.NoTAA.vcxproj  dllmain.cpp
source/Hitman3.NoTAA/: Hitman3.NoTAA.sln  Hitman3.NoTAA.vcxproj  dllmain.cpp
source/KittyHawk.Patches/: KittyHawk.Patches.vcxproj  KittyHawk.Patches.vcxproj.filters  dllmain.cpp
source/LegoHorizonAdventures.NoTAA/: dllmain.cpp
source/LiesOfP.NoTAA/: LiesOfP.NoTAA.sln  LiesOfP.NoTAA.vcxproj  dllmain.cpp
source/MCC.SplitScreen/: CMakeLists.txt  SharePatch.hpp  UserProfile.hpp  config.hpp  dllmain.cpp  halo1.cpp  halo1.hpp  halo2.cpp  halo2.hpp  halo3.cpp  halo3.hpp  halo4.cpp  halo4.hpp  haloreach.cpp  haloreach.hpp
source/NierAutomata.DebugFeatures/: CMakeLists.txt  FlagMenu.cpp  FlagMenu.hpp  Menu.cpp  Menu.hpp  SDKEnums.hpp  d3d11_patch.cpp  d3d11_patch.hpp  dllmain.cpp  flags.hpp
source/NierReplicant.Fix/: NierReplicant.Fix.sln  NierReplicant.Fix.vcxproj  dllmain.cpp
source/PlanetOfLana.NoTAA/: PlanetOfLana.NoTAA.sln  PlanetOfLana.NoTAA.vcxproj  d3d11.ini  dllmain.cpp
source/QuantumBreak.Patches/: dllmain.cpp
source/RDR3.Patches/: RDR3.Patches.vcxproj  RDR3.Patches.vcxproj.filters  dllmain.cpp  install_mod.cpp  mod_data.hpp  mod_enum.h
source/RDR3.Patches/scripthook_sdk/inc/: enums.h  main.h  nativeCaller.h  natives.h  types.h
source/RE4.Sharpness/: RE4.Sharpness.sln  RE4.Sharpness.vcxproj  RE4.Sharpness.vcxproj.filters  dllmain.cpp
source/RE8.NoTAA/: RE8.NoTAA.sln  RE8.NoTAA.vcxproj  RE8.NoTAA.vcxproj.filters  dllmain.cpp
source/Remnant2.NoTAA/: Remnant2.NoTAA.sln  Remnant2.NoTAA.vcxproj  dllmain.cpp
source/Shared/: ImSubMenu.cpp  helper.cpp  memory.cpp
source/Shared/HDE/: HDE64.c  HDE64.h  Table64.h
source/SpiderMan.MilesMorales.Patches/: CMakeLists.txt  SpiderMan.MilesMorales.Patches.vcxproj  dllmain.cpp
source/T1X.DebugFeatures/: CMakeLists.txt  LookId.hpp  T1X.DebugFeatures.filters  T1X.DebugFeatures.sln  T1X.DebugFeatures.vcxproj  T1X.DebugFeatures.vcxproj.filters  code_caves.cpp  code_caves.hpp  dllmain.cpp  dmenu.cpp  dmenu.hpp  patterns.hpp
source/TheGreatCircle.NoTAA/: dllmain.cpp
source/Uncharted4TLL.NoTAA/: CMakeLists.txt  Uncharted4TLL.NoTAA.sln  Uncharted4TLL.NoTAA.vcxproj  Uncharted4TLL.NoTAA.vcxproj.filters  code_caves.cpp  code_caves.hpp  dllmain.cpp  patterns.hpp
source/WoLong.Fix/: CMakeLists.txt  WoLong.Fix.vcxproj  WoLong.Fix.vcxproj.filters  dllmain.cpp
